--- a/bachelor_projects.html
+++ b/bachelor_projects.html
@@ -134,9 +134,9 @@ Yihui Xie, J. J. Allaire, Garrett Grolemund</li>
 
 <h2 id="project-suggestions">Project suggestions</h2>
 
-<p>Below are two project suggestions. For each data is available
-and a rough idea of what you could work on is provided. You are,
-however, encouraged to adjust the research question to your own
+<p>Below are three project suggestions. For each, data is
+available and a rough idea of what you could work on is provided. You
+are, however, encouraged to adjust the research question to your own
 interests.</p>
 
 <p>If you already have an applied data-based project of your own in mind,
