--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
 <h3 id="2024">2024</h3>
 <ul>
   <li>
-    <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. <br />Preprint <a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
+    <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. In Proceedings of the 12th International Conference on Learning Representations (accepted). <br />Preprint <a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
   </li>
   <li>
     <p>S. Saengkyongam, N. Pfister, P. Klasnja, S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. Journal of Machine Learning Research (accept). <br />Preprint <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</p>
