--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>N. Pfister, P. Bühlmann: <em>Extrapolation-Aware Nonparametric Statistical Inference</em>. <br />Preprint <a href="https://arxiv.org/abs/2402.09758">ArXiv</a>.</p>
+  </li>
+  <li>
     <p>A. R. Lundborg, N. Pfister: <em>Perturbation-based Analysis of Compositional Data</em>. <br />Preprint <a href="https://arxiv.org/abs/2311.18501">ArXiv</a>.</p>
   </li>
   <li>
@@ -80,7 +83,7 @@
     <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. In Proceedings of the 12th International Conference on Learning Representations (accepted). <br />Preprint <a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
   </li>
   <li>
-    <p>S. Saengkyongam, N. Pfister, P. Klasnja, S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. Journal of Machine Learning Research (accepted). <br />Preprint <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</p>
+    <p>S. Saengkyongam, N. Pfister, P. Klasnja, S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. Journal of Machine Learning Research, 25(34), 1-36.<br /><a href="https://jmlr.org/papers/volume25/23-0802/23-0802.pdf">https://jmlr.org/papers/volume25/23-0802/23-0802.pdf</a>, <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</p>
   </li>
 </ul>
 
