--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>S. Huang, J. Peters, N. Pfister: <em>Causal Change Point Detection and Localization</em>. <br />Preprint <a href="https://arxiv.org/abs/2403.12677">ArXiv</a>.</p>
+  </li>
+  <li>
     <p>N. Pfister, P. Bühlmann: <em>Extrapolation-Aware Nonparametric Statistical Inference</em>. <br />Preprint <a href="https://arxiv.org/abs/2402.09758">ArXiv</a>.</p>
   </li>
   <li>
