--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
     <p>N. Pfister, P. Bühlmann: <em>Extrapolation-Aware Nonparametric Statistical Inference</em>. <br />Preprint <a href="https://arxiv.org/abs/2402.09758">ArXiv</a>.</p>
   </li>
   <li>
-    <p>A. R. Lundborg, N. Pfister: <em>Perturbation-based Analysis of Compositional Data</em>. <br />Preprint <a href="https://arxiv.org/abs/2311.18501">ArXiv</a>.</p>
+    <p>A. R. Lundborg, N. Pfister: <em>Perturbation-based Effect Measures for Compositional Data</em>. <br />Preprint <a href="https://arxiv.org/abs/2311.18501">ArXiv</a>.</p>
   </li>
   <li>
     <p>N. Gnecco, J. Peters, S. Engelke, N. Pfister: <em>Boosted Control Functions</em>. <br />Preprint <a href="https://arxiv.org/abs/2310.05805">ArXiv</a>.</p>
