--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>L. Kook, N. Pfister: <em>Instrumental Variable Estimation of Distributional Causal Effects</em>. <br />Preprint <a href="https://arxiv.org/abs/2406.19986">ArXiv</a>.</p>
+  </li>
+  <li>
     <p>M. Lazzaretto, J. Peters, N. Pfister: <em>Invariant Subspace Decomposition</em>. <br />Preprint <a href="https://arxiv.org/abs/2404.09962">ArXiv</a>.</p>
   </li>
   <li>
