--- a/software.html
+++ b/software.html
@@ -64,16 +64,25 @@
         <hr>
         
             <div class="container content">
-                <h3 id="software-packages">Software packages</h3>
+                <h3 id="adaxt---fast-adaptable-and-extendable-trees-for-research">adaXT - Fast Adaptable and Extendable Trees for Research</h3>
+
+<p>adaXT is a Python module for tree-based machine learning algorithms that is fast, adaptable and extendable. It is intended to
+provide a simple way of constructing specialized tree-based algorithms but also contains several default algorithms
+for classification, regression, conditional quantile estimation and gradient estimation.</p>
 
 <ul>
-  <li>R code for “StabilizedRegression” available on
-<a href="https://cran.r-project.org/web/packages/StabilizedRegression/index.html">CRAN</a>. Source
-and bug report on
-<a href="https://github.com/NiklasPfister/StabilizedRegression-R">github</a>.</li>
+  <li><a href="https://github.com/NiklasPfister/adaXT">Github repository</a></li>
+  <li><a href="https://niklaspfister.github.io/adaXT/">Documentation</a></li>
+  <li><a href="https://pypi.org/project/adaXT/">Pypi</a></li>
+</ul>
+
+<h3 id="further-software-related-to-research-projects">Further Software Related to Research Projects</h3>
+
+<ul>
+  <li>R code for “StabilizedRegression” available on <a href="https://cran.r-project.org/web/packages/StabilizedRegression/index.html">CRAN</a>. Source
+and bug report on <a href="https://github.com/NiklasPfister/StabilizedRegression-R">github</a>.</li>
   <li>R code for “CausalKinetiX” available on <a href="https://cran.r-project.org/web/packages/CausalKinetiX/index.html">CRAN</a>. Source
-and bug report on
-<a href="https://github.com/NiklasPfister/CausalKinetiX-R">github</a>.</li>
+and bug report on <a href="https://github.com/NiklasPfister/CausalKinetiX-R">github</a>.</li>
   <li>R code for “dHSIC” available on <a href="https://cran.r-project.org/web/packages/dHSIC/index.html">CRAN</a>. Source
 and bug report on
 <a href="https://github.com/NiklasPfister/dHSIC">github</a>.</li>
@@ -83,26 +92,10 @@ and bug report on <a href="https://github.com/NiklasPfister/seqICP">github</a>.<
   <li>Python, R and Matlab code for “coroICA” is available on the <a href="https://sweichwald.de/coroICA/">project website</a>.</li>
 </ul>
 
-<h3 id="jupyter-notebooks-in-r">Jupyter Notebooks (in R)</h3>
+<h3 id="causality-jupyter-notebooks-in-r-and-python">Causality Jupyter Notebooks (in R and Python)</h3>
 
-<p><a href="http://www.math.ku.dk/~peters/">Jonas Peters</a> and I have created
-some jupyter notebooks. They give a self-contained overview of a few
-selected topics related to causality and include several coding
-exercises. Currently, we have notebooks for the topics</p>
-
-<ul>
-  <li>Computing Interventions</li>
-  <li>Instrumental Variables</li>
-  <li>Restricted Structural Causal Models</li>
-  <li>Invariant Prediction</li>
-</ul>
-
-<p>They can be downloaded
-<a href="download/causalNotebooks-2019-06-01.zip">here</a>. The package contains
-a “readme” with some instructions for installing jupyter notebook (we
-apologize if the instructions are out-of-date). Most importantly, you
-may want to run “setupNotebook.ipynb” first to make sure that
-everything is working.</p>
+<p>We have created several short self-contained exercises that provide an overview on several selected topics related to
+causality. They are available <a href="https://github.com/CoCaLa/causality-tutorial-exercises">here</a>.</p>
 
             </div>
         
