--- a/teaching.html
+++ b/teaching.html
@@ -64,19 +64,21 @@
         <hr>
         
             <div class="container content">
-                <h3 id="lecture-notes">Lecture notes</h3>
+                <h3 id="lecture-notes">Lecture Notes</h3>
 
 <ul>
   <li><a href="download/lecture_notes_statsB.pdf">Statistics B: Modern Statistical Theory</a></li>
+  <li><a href="download/lecture_notes_causality.pdf">Causality - Potential Outcome Models</a></li>
 </ul>
 
 <p>Please let me know if you spot any mistakes or have any other comments
 on the lecture notes.</p>
 
-<h3 id="course-responsible">Course Responsible</h3>
+<h3 id="course-responsible-at-university-of-copenhagen">Course Responsible at <a href="https://www.ku.dk/english/">University of Copenhagen</a></h3>
 
 <ul>
-  <li><a href="http://web.math.ku.dk/~susanne/BSc/Projects2023blok34">Bachelor Projects in Statistics</a> (Block III/IV - 2022/2023)</li>
+  <li><a href="https://kurser.ku.dk/course/nmak17001u/2023-2024">Causality</a> (Block IV - 2023/2024)</li>
+  <li><a href="https://kurser.ku.dk/course/nmak20004u/2023-2024">Statistics B</a> (Block III - 2023/2024)</li>
   <li><a href="https://kurser.ku.dk/course/nmak20004u/2022-2023">Statistics B</a> (Block III - 2022/2023)</li>
   <li><a href="https://kurser.ku.dk/course/nmak20004u/2021-2022">Statistics B</a> (Block III - 2021/2022)</li>
   <li><a href="https://kurser.ku.dk/course/nmaa05083u/2021-2022">Stochastic Processes</a> (Block II - 2021/2022)</li>
