--- a/index.html
+++ b/index.html
@@ -85,31 +85,29 @@ try to reflect in my approach to research.</p>
 <p><em>Keywords:</em> applied biology, causality, dynamical systems, independence
 testing, kernel methods, time series</p>
 
-<h3 id="open-positions">Open Positions</h3>
-
-<p>Open position are annouced via the <a href="https://www.math.ku.dk/english/about/jobs/">official deparment
-calls</a>. If you have any
-questions, please send me an email.</p>
-
 <!---
-The current PhD call can be found [here](https://www.math.ku.dk/english/about/jobs/phd-stipends-in-statistics-and-the-mathematics-of-insurance-and-economics-sept.21/).
+### Open Positions
+
+Open position are annouced via the [official deparment
+calls](https://www.math.ku.dk/english/about/jobs/). If you have any
+questions, please send me an email.
+
+
+### News
+
+* July 2023: I was promoted to associate professor.
+* Oct 2022: [Anton Rask Lundborg](https://www.arlundborg.com/) started a postdoc.
+* Oct 2022: [Margherita Lazzaretto](https://www.math.ku.dk/english/about/news/new-names/margherita-lazzaretto-phd-student/) has started her PhD position.
+* Oct 2021: I was awarded an [Emerging Investigator grant](https://datascience.novonordiskfonden.dk/projects/causalbiome-developing-a-unified-statistical-framework-for-analyzing-microbiome-data/) by the Novo Nordisk Foundation for my project *CausalBiome: Developing a unified statistical framework for analyzing microbiome data*.
+* Sept 2021: [Shimeng Huang](https://www.math.ku.dk/english/about/news/new-names/shimeng-huang-phd-student/) has started her PhD position.
+* July 2021: Launched the [Learning by Doing - NeurIPS 2021 Competition](https://learningbydoingcompetition.github.io/).
+* Sept 2020: [Sorawit
+  Saengkyongam](https://sorawitj.github.io/)
+  started his PhD position under Jonas Peters and my supervision.
+* Jan 2020: Started position as assistant professor at the University
+  of Copenhagen.
+
 --->
-
-<h3 id="news">News</h3>
-
-<ul>
-  <li>July 2023: I was promoted to associate professor.</li>
-  <li>Oct 2022: <a href="https://www.arlundborg.com/">Anton Rask Lundborg</a> started a postdoc.</li>
-  <li>Oct 2022: <a href="https://www.math.ku.dk/english/about/news/new-names/margherita-lazzaretto-phd-student/">Margherita Lazzaretto</a> has started her PhD position.</li>
-  <li>Oct 2021: I was awarded an <a href="https://datascience.novonordiskfonden.dk/projects/causalbiome-developing-a-unified-statistical-framework-for-analyzing-microbiome-data/">Emerging Investigator grant</a> by the Novo Nordisk Foundation for my project <em>CausalBiome: Developing a unified statistical framework for analyzing microbiome data</em>.</li>
-  <li>Sept 2021: <a href="https://www.math.ku.dk/english/about/news/new-names/shimeng-huang-phd-student/">Shimeng Huang</a> has started her PhD position.</li>
-  <li>July 2021: Launched the <a href="https://learningbydoingcompetition.github.io/">Learning by Doing - NeurIPS 2021 Competition</a>.</li>
-  <li>Sept 2020: <a href="https://sorawitj.github.io/">Sorawit
-Saengkyongam</a>
-started his PhD position under Jonas Peters and my supervision.</li>
-  <li>Jan 2020: Started position as assistant professor at the Unversity
-of Copenhagen.</li>
-</ul>
 
             </div>
         
