--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,12 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>S. Huang, N. Pfister, J. Bowden: <em>Sparse Causal Effect Estimation using Two-Sample Summary Statistics in the Presence of Unmeasured Confounding</em>. <br />Preprint <a href="https://arxiv.org/abs/2410.12300">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>J. Liu, T. Steensgaard, M. N. Wright, N. Pfister, M. Hiabu: <em>Fast Estimation of Partial Dependence Functions using Trees</em>. <br />Preprint <a href="https://arxiv.org/abs/2410.13448">ArXiv</a>.</p>
+  </li>
+  <li>
     <p>L. Kook, N. Pfister: <em>Instrumental Variable Estimation of Distributional Causal Effects</em>. <br />Preprint <a href="https://arxiv.org/abs/2406.19986">ArXiv</a>.</p>
   </li>
   <li>
