--- a/index.html
+++ b/index.html
@@ -66,24 +66,29 @@
             <div class="container content">
                 <p><img class="profile-picture" src="download/profile_pic.jpg" /></p>
 
-<p>Associate Professor of Statistics<br />
+<p>Senior Research Scientist<br />
+<a href="https://www.lakera.ai/">Lakera AI</a></p>
+
+<p><br />
+<small>
+Previously: Associate Professor of Statistics<br />
 <a href="https://cocala.github.io/">Copenhagen Causality Lab</a><br />
-<a href="https://www.math.ku.dk/english/">Department of Mathematical Sciences</a>, <a href="https://www.ku.dk/english/">University of Copenhagen</a></p>
+<a href="https://www.math.ku.dk/english/">Department of Mathematical Sciences</a>, <a href="https://www.ku.dk/english/">University of Copenhagen</a>
+</small></p>
 
 <h3 id="research">Research</h3>
 
-<p>My research focuses on statistical methodology for complex data
-structures. Developing statistical tools that help us understand
-underlying causal mechanisms is becoming more important as our data
-collection capabilities increase. Much of my work uses some notion of
-causality and stability to model and infer parts of such mechanisms
-using data.</p>
+<p>My research focuses on statistical methodology for modern data applications, that either involve large models, complex
+data structures or both. Developing statistical tools that help us understand the underlying mechanisms in these
+applications is becoming more important as their complexity and sophistication increases.</p>
 
-<p>Statistical methodology should be driven by applied problems which I
-try to reflect in my approach to research.</p>
+<p>Much of my previous work uses some notion of causality and stability to model and infer parts of these mechanisms. At
+Lakera I work on developing methods to keep generative AI applications safe and secure. This involves a lot of exciting research,
+including on large pre-trained models. Understanding the inner workings of these models is a crucial step in
+developing effective defenses.</p>
 
-<p><em>Keywords:</em> applied biology, causality, dynamical systems, independence
-testing, kernel methods, time series</p>
+<p><em>Keywords:</em> applied biology, causality, dynamical systems, independence testing, kernel methods, large pre-trained
+models, time series</p>
 
 <!---
 ### Open Positions
