--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,11 @@
         
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
+
 <ul>
+  <li>
+    <p>N. Pfister, V. Volhejn, M. Knott, S. Arias, J. Bazińska, M. Bichurin, A. Commike, J. Darling, P. Dienes, M. Fiedler, D. Haber, M. Kraft, M. Lancini, M. Mathys, D. Pascual-Ortiz, J. Podolak, A. Romero-López, K. Shiarlis, A. Signer, Z. Terek, A. Theocharis, D. Timbrell, S. Trautwein, S. Watts, N. Wu, M. Rojas-Carulla: <em>Gandalf the Red: Adaptive Security for LLMs</em>. <br />Preprint <a href="https://arxiv.org/abs/2501.07927">ArXiv</a>.</p>
+  </li>
   <li>
     <p>S. Huang, N. Pfister, J. Bowden: <em>Sparse Causal Effect Estimation using Two-Sample Summary Statistics in the Presence of Unmeasured Confounding</em>. <br />Preprint <a href="https://arxiv.org/abs/2410.12300">ArXiv</a>.</p>
   </li>
