--- a/publications.html
+++ b/publications.html
@@ -68,19 +68,7 @@
 
 <ul>
   <li>
-    <p>N. Pfister, V. Volhejn, M. Knott, S. Arias, J. Bazińska, M. Bichurin, A. Commike, J. Darling, P. Dienes, M. Fiedler, D. Haber, M. Kraft, M. Lancini, M. Mathys, D. Pascual-Ortiz, J. Podolak, A. Romero-López, K. Shiarlis, A. Signer, Z. Terek, A. Theocharis, D. Timbrell, S. Trautwein, S. Watts, N. Wu, M. Rojas-Carulla: <em>Gandalf the Red: Adaptive Security for LLMs</em>. <br />Preprint <a href="https://arxiv.org/abs/2501.07927">ArXiv</a>.</p>
-  </li>
-  <li>
-    <p>S. Huang, N. Pfister, J. Bowden: <em>Sparse Causal Effect Estimation using Two-Sample Summary Statistics in the Presence of Unmeasured Confounding</em>. <br />Preprint <a href="https://arxiv.org/abs/2410.12300">ArXiv</a>.</p>
-  </li>
-  <li>
-    <p>J. Liu, T. Steensgaard, M. N. Wright, N. Pfister, M. Hiabu: <em>Fast Estimation of Partial Dependence Functions using Trees</em>. <br />Preprint <a href="https://arxiv.org/abs/2410.13448">ArXiv</a>.</p>
-  </li>
-  <li>
     <p>L. Kook, N. Pfister: <em>Instrumental Variable Estimation of Distributional Causal Effects</em>. <br />Preprint <a href="https://arxiv.org/abs/2406.19986">ArXiv</a>.</p>
-  </li>
-  <li>
-    <p>M. Lazzaretto, J. Peters, N. Pfister: <em>Invariant Subspace Decomposition</em>. <br />Preprint <a href="https://arxiv.org/abs/2404.09962">ArXiv</a>.</p>
   </li>
   <li>
     <p>S. Huang, J. Peters, N. Pfister: <em>Causal Change Point Detection and Localization</em>. <br />Preprint <a href="https://arxiv.org/abs/2403.12677">ArXiv</a>.</p>
@@ -96,10 +84,27 @@
   </li>
 </ul>
 
+<h3 id="2025">2025</h3>
+
+<ul>
+  <li>
+    <p>N. Pfister, V. Volhejn, M. Knott, S. Arias, J. Bazińska, M. Bichurin, A. Commike, J. Darling, P. Dienes, M. Fiedler, D. Haber, M. Kraft, M. Lancini, M. Mathys, D. Pascual-Ortiz, J. Podolak, A. Romero-López, K. Shiarlis, A. Signer, Z. Terek, A. Theocharis, D. Timbrell, S. Trautwein, S. Watts, N. Wu, M. Rojas-Carulla: <em>Gandalf the Red: Adaptive Security for LLMs</em>. In Proceedings of the 42nd International Conference on Machine Learning (accepted). <br />Preprint <a href="https://arxiv.org/abs/2501.07927">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>J. Liu, T. Steensgaard, M. N. Wright, N. Pfister, M. Hiabu: <em>Fast Estimation of Partial Dependence Functions using Trees</em>. In Proceedings of the 42nd International Conference on Machine Learning (accepted). <br />Preprint <a href="https://arxiv.org/abs/2410.13448">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>M. Lazzaretto, J. Peters, N. Pfister: <em>Invariant Subspace Decomposition</em>. Journal of Machine Learning Research (accepted). <br />Preprint <a href="https://arxiv.org/abs/2404.09962">ArXiv</a>.</p>
+  </li>
+  <li>
+    <p>S. Huang, N. Pfister, J. Bowden: <em>Sparse Causal Effect Estimation using Two-Sample Summary Statistics in the Presence of Unmeasured Confounding</em>. In Proceedings of the 28th International Conference on Artificial Intelligence and Statistics (accepted). <br />Preprint <a href="https://arxiv.org/abs/2410.12300">ArXiv</a>.</p>
+  </li>
+</ul>
+
 <h3 id="2024">2024</h3>
 <ul>
   <li>
-    <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. In Proceedings of the 12th International Conference on Learning Representations (accepted). <br />Preprint <a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
+    <p>S. Saengkyongam, E. Rosenfeld, P. Ravikumar, N. Pfister, J. Peters: <em>Identifying Representations for Intervention Extrapolation</em>. In Proceedings of the 12th International Conference on Learning Representations. <br /><a href="https://arxiv.org/abs/2310.04295">ArXiv</a>.</p>
   </li>
   <li>
     <p>S. Saengkyongam, N. Pfister, P. Klasnja, S. Murphy, J. Peters: <em>Effect-Invariant Mechanisms for Policy Generalization</em>. Journal of Machine Learning Research, 25(34), 1-36.<br /><a href="https://jmlr.org/papers/volume25/23-0802/23-0802.pdf">https://jmlr.org/papers/volume25/23-0802/23-0802.pdf</a>, <a href="https://arxiv.org/abs/2306.10983">ArXiv</a>.</p>
